overlays/services/inventory/overlay/ingresses/inventory-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: inventory-ingress
  annotations:
    nginx.ingress.kubernetes.io/compress-types: "text/css application/javascript application/json"
    nginx.ingress.kubernetes.io/compress-enable: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 50m
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 50m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - # domain
      secretName: # cert-secret

  rules:
    - host: # domain
      http:
        paths:
          - path: /${sub_path}(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: # service-name
                port:
                  number: 80
